fix: letter spacing head

--- a/singolo3.css
+++ b/singolo3.css
@@ -32,7 +32,7 @@ body {
   font-size: 30px;
   line-height: 18px;
   color: #f0d8d9;
-  letter-spacing: -0.005em;
+  letter-spacing: -0.006em;
 }
 
 .header-logo-quote p {
